<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>9</source>
                    <target>9</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <parent>
        <groupId>nl.inl.blacklab</groupId>
        <artifactId>blacklab-all</artifactId>
        <version>3.0.0-SNAPSHOT</version>
    </parent>
    <artifactId>blacklab-engine</artifactId>
    <packaging>jar</packaging>

    <name>BlackLab Engine</name>
    <description>
        The BlackLab "engine" that actually executes queries.
        Functionality that uses the engine but is not required by it will be extracted into separate modules.
    </description>

    <dependencies>
    
        <dependency>
            <groupId>${project.parent.groupId}</groupId>
            <artifactId>blacklab-util</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>${project.parent.groupId}</groupId>
            <artifactId>blacklab-common</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>${project.parent.groupId}</groupId>
            <artifactId>blacklab-content-store</artifactId>
            <version>${project.version}</version>
        </dependency>

        <!-- Lucene libs -->
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-core</artifactId>
            <version>${blacklab.luceneVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-analyzers-common</artifactId>
            <version>${blacklab.luceneVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-highlighter</artifactId>
            <version>${blacklab.luceneVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-queries</artifactId>
            <version>${blacklab.luceneVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-queryparser</artifactId>
            <version>${blacklab.luceneVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-misc</artifactId>
            <version>${blacklab.luceneVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-backward-codecs</artifactId>
            <version>${blacklab.luceneVersion}</version>
        </dependency>
		<dependency>
		    <groupId>org.apache.solr</groupId>
		    <artifactId>solr-core</artifactId>
		    <version>${blacklab.luceneVersion}</version>
		</dependency>

        <!-- Specific more efficient collection types -->
        <dependency>
            <groupId>org.eclipse.collections</groupId>
            <artifactId>eclipse-collections</artifactId>
            <version>${eclipse.collections.version}</version>
        </dependency>
        <dependency>
            <groupId>it.unimi.dsi</groupId>
            <artifactId>fastutil</artifactId>
            <version>8.5.8</version>
        </dependency>

        <!-- Jackson JSON/YAML reading -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-yaml</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.jaxrs</groupId>
            <artifactId>jackson-jaxrs-json-provider</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        

        <!-- XML parsing (VTD and Saxon) -->
        <dependency>
            <groupId>com.ximpleware</groupId>
            <artifactId>vtd-xml</artifactId>
            <version>2.13.4</version>
        </dependency>
        <dependency>
            <groupId>net.sf.saxon</groupId>
            <artifactId>Saxon-HE</artifactId>
            <version>11.3</version>
        </dependency>

        <!-- Encoding detection -->
        <dependency>
            <groupId>com.github.albfernandez</groupId>
            <artifactId>juniversalchardet</artifactId>
            <version>2.4.0</version>
        </dependency>
        
        <!--  faster more memory efficient alternatives to standard collection classes -->
        <!-- https://mvnrepository.com/artifact/net.sf.trove4j/trove4j -->
		<dependency>
		    <groupId>net.sf.trove4j</groupId>
		    <artifactId>trove4j</artifactId>
		    <version>3.0.3</version>
		</dependency>

        <!-- caffeine for cache -->
        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
            <version>3.0.6</version>
        </dependency>
		        

    </dependencies>


</project>
